Update favicon location

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<title>Forza Footwear | Dicover Your Style</title>
 		<link
 			rel="shortcut icon"
-			href="/images/forza-favicon.png"
+			href="/email-projects/forza/images/forza-favicon.png"
 			type="image/x-icon"
 		/>
 		<style>
