--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="color-scheme" content="light dark" />
 		<meta name="supported-color-schemes" content="light dark" />
-		<title>Forza Footwear | Dicover Your Style</title>
+		<title>Forza Footwear | Discover Your Style</title>
 		<link
 			rel="shortcut icon"
 			href="/email-projects/forza/images/forza-favicon.png"
